<resources>
    <string name="app_name">Saller app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_bill">Bill</string>
    <string name="bottom_nav_employee">Employee</string>
    <string name="bottom_nav_product">Product</string>
    <string name="bottom_nav_account">Account</string>
    <string name="home">Trang chủ</string>
    <string name="statistics_30_day">Thống kê 30 ngày gần đây</string>
    <string name="total_revenue">Tổng thu</string>
    <string name="total_expenditure">Tổng chi</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="til_email">Email</string>
    <string name="til_password">Password</string>
    <string name="txt_remember">Quên mật khẩu?</string>
    <string name="txt_signup">Đăng ký</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_login_gg">Hoặc đăng nhập với google</string>
    <string name="txt_signup_gg">Đăng ký bằng google</string>
    <string name="txt_email">Nhập email của bạn</string>
    <string name="txt_pass">Nhập password của bạn</string>
    <string name="default_web_client_id">982878672148-uhc13ioupreefjh8c3hfa92lcbdk2pea.apps.googleusercontent.com</string>
</resources>