<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/line_light"
    tools:context=".controller.view.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/txt_login"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_login_email"
        android:layout_marginTop="@dimen/_18sdp"
        android:backgroundTint="@color/line"
        android:hint="@string/til_email"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingBottom="@dimen/_11sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"/>


    <EditText
        android:id="@+id/ed_login_password"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/line"
        android:hint="@string/til_password"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingBottom="@dimen/_11sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/txtRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginRight="@dimen/_15sdp"
        android:gravity="right"
        android:text="@string/txt_remember"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/_10ssp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_42sdp"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/_7sdp"
        android:fontFamily="@font/inter_light"
        android:textStyle="bold"
        android:text="@string/txt_login"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:backgroundTint="@color/line"
        android:layout_marginTop="@dimen/_35sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_signup"
        app:strokeWidth="@dimen/_1sdp"
        app:strokeColor="@color/line"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_42sdp"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/_7sdp"
        android:fontFamily="@font/inter_light"
        android:textStyle="bold"
        android:text="@string/txt_signup"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/line"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/_11sdp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_13sdp"
        android:text="@string/txt_login_gg"
        android:fontFamily="@font/inter"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/icon_google" />


</LinearLayout>